# pst

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
docs/: architecture.md  migration-report.md  plugin-development.md  roadmap.md
examples/: detect-ambiguous-multi.json  detect-ambiguous-multi.md  detect-ambiguous-multi.txt  detect-docker-app.json  detect-docker-app.md  detect-docker-app.txt  detect-empty-project.json  detect-empty-project.md  detect-empty-project.txt  detect-go-app.json  detect-go-app.md  detect-go-app.txt  detect-multi-stack.json  detect-multi-stack.md  detect-multi-stack.txt  detect-node-app.json  detect-node-app.md  detect-node-app.txt  detect-node-tooling-only.json  detect-node-tooling-only.md  detect-node-tooling-only.txt  detect-python-app.json  detect-python-app.md  detect-python-app.txt  detect-python-library.json  detect-python-library.md  detect-python-library.txt  detect-subdir-docker-only.json  detect-subdir-docker-only.md  detect-subdir-docker-only.txt  explain-ambiguous-multi.txt  explain-docker-app.txt  explain-empty-project.txt  explain-go-app.txt  explain-multi-stack.txt  explain-node-app.txt  explain-node-tooling-only.txt  explain-python-app.txt  explain-python-library.txt  explain-subdir-docker-only.txt  (+10 more)
fixtures/python-app/: README.md  main.py  pyproject.toml  requirements.txt
scripts/: benchmark-plugins.js  realworld.js
src/: bin.ts  index.ts
tests/: cli-hardening.test.ts  cli.test.ts  confidence.test.ts  go.test.ts  (+21 more)
(+89 files in other folders)
